<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/txt_investimento"
            android:textColor="@color/blue"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="230dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/lightGreen"
                android:textColor="@color/green"
                android:text="@string/txt_renda"
                style="@style/TamanhoTextoPadrao" />

            <Button
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:backgroundTint="@color/lightGreen"
                android:textColor="@color/green"
                android:text="@string/txt_acao"
                style="@style/TamanhoTextoPadrao" />

            <Button
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/lightGreen"
                android:textColor="@color/green"
                android:text="@string/txt_fis"
                style="@style/TamanhoTextoPadrao" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="200dp"
                android:text="@string/txt_acoesValorizadas"
                android:textColor="@color/blue"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp">

            <Button
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/lightBlue"
                android:textColor="@color/blue"
                android:text="@string/txt_pet"
                style="@style/TamanhoTextoPadrao" />

            <Button
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:backgroundTint="@color/lightBlue"
                android:textColor="@color/blue"
                android:text="@string/txt_cpl"
                style="@style/TamanhoTextoPadrao" />

            <Button
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/lightBlue"
                android:textColor="@color/blue"
                android:text="@string/txt_tae"
                style="@style/TamanhoTextoPadrao" />

            <Button
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/lightBlue"
                android:textColor="@color/blue"
                android:text="@string/txt_weg"
                style="@style/TamanhoTextoPadrao" />


        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>