<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="30dp"
                    android:src="@mipmap/dinheiro" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="60dp"
                    android:text="@string/titulo1"
                    android:textColor="@color/blueTitle"
                    android:textSize="29sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_financeira"
                    android:textColorHint="@color/grey"
                    android:inputType="number"
                    android:layout_margin="16dp"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_poupanca"
                    android:inputType="number"
                    android:textColorHint="@color/grey"
                    android:layout_margin="16dp"
                    android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/txt_botao1"
                    android:backgroundTint="@color/green"
                    android:textSize="20sp"
                    android:layout_marginLeft="30dp"
                    />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/txt_botao2"
                    android:backgroundTint="@color/yellow"
                    android:textSize="20sp"
                    android:layout_marginLeft="30dp"
                    />


            </LinearLayout>


            </LinearLayout>

        </ScrollView>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>